--- a/config.tex
+++ b/config.tex
@@ -2,29 +2,29 @@
 
 % Semesterticket
 \newcommand{\semesterticketpreis}{\EUR{141,90}} % https://www.naldo.de/tickets/semesterticket/
-\newcommand{\jugendticketbwpreis}{\EUR{182,50}} % https://www.naldo.de/tickets/jugendticketbw-studierende/
+\newcommand{\jugendticketbwpreis}{\EUR{153,70}} % https://www.naldo.de/tickets/dticket-jugendbw-studierende/
 \newcommand{\dticketpreis}{\EUR{49,00}}
 \newcommand{\dtickettuebingenpreis}{\EUR{34,00}} % https://www.naldo.de/tickets/deutschlandticket-tuebingen/
 
 \ifinfo
-\newcommand{\Matheprof}{Prof. Markwig}
-\newcommand{\Infoprof}{Jun.-Prof. Brachthäuser / Prof. Pons-Moll}
+\newcommand{\Matheprof}{Prof. Eckstein}
+\newcommand{\Infoprof}{Prof. Grust}
 
 	% Studienberatung
-	\newcommand{\studBeratungInfo}{Julia Katheder \& Prof. Menth}
+	\newcommand{\studBeratungInfo}{Julia Katheder \& Louisa Lambrecht \& Prof. Menth}
 	\newcommand{\studBeratungBio}{Prof. Kay Nieselt}
 	\newcommand{\studBeratungMedien}{Prof. Schilling}
 	\newcommand{\studBeratungMedizin}{Prof. Walter \& Prof. Pfeifer}
 	\newcommand{\studBeratungLehramt}{Laura Herb \& Prof. Ostermann}
-	\newcommand{\studBeratungKogni}{Dr. Elisabeth Hein}
+	\newcommand{\studBeratungKogni}{Dr. Elisabeth Hein \& Dr. Verena Seibold}
 
 \newcommand{\Studiendekan}{Prof. Hennig}
 \newcommand{\PAVorsitz}{Prof. Menth}
 \else
-\newcommand{\studBeratung}{Simon Heuschkel \& Elias Küchle}
-	\newcommand{\studBeratungTwolines}{Simon Heuschkel und \newline Elias Küchle}
-	\newcommand{\kognimentoren}{Lukas Sodan \& Anne Schlecht}
-	\newcommand{\kognimentorenTwolines}{Lukas Sodan und \newline Anne Schlecht}
+\newcommand{\studBeratung}{Lukas Sodan \& Elias Küchle}
+	\newcommand{\studBeratungTwolines}{Lukas Sodan und \newline Elias Küchle}
+	% \newcommand{\kognimentoren}{Lukas Sodan \& Anne Schlecht}
+	% \newcommand{\kognimentorenTwolines}{Lukas Sodan und \newline Anne Schlecht}
 \fi
 
 \newcommand{\FBSprecher}{Prof. Geiger}
