--- a/shared/vorlesungszeit/hopo.tex
+++ b/shared/vorlesungszeit/hopo.tex
@@ -9,8 +9,8 @@ Anliegen hintragen.
 Was ist denn die Verfasste Studierendenschaft? Du und alle anderen Studierenden
 Tübingens. So einfach die kurze Antwort. Die Lange bezieht sich auf einen
 Ausschnitt des \textit{Landeshochschulgesetzes}.  Zusammengefasst steht da
-sowas wie ,,Studierende an einem Hochschulstandort haben das Recht sich zusammen
-zu schließen und als Interessensvertretung in der Hochschule gehör zu finden''.
+sowas wie ,,Studierende an einem Hochschulstandort haben das Recht, sich zusammen
+zu schließen und als Interessensvertretung in der Hochschule Gehör zu finden''.
 Das Interessante ist, dass die Verfasste Studierendenschaft auch Gelder bekommt,
 beispielsweise aus dem Semesterbeitrag.
 
@@ -19,7 +19,7 @@ Einwohner sind Studierende. Es wundert also nicht, dass es hier eine
 gut aufgestellte Studierendenvertretung gibt.
 
 
-\subsection{StuRa, AStA, was das?}
+\subsection{StuRa, AStA, was ist das?}
 
 Vielleicht sagt euch der Begriff AStA -- also Allgememeiner
 Studierendenausschuss -- etwas. In Tübingen wurde der vor vielen Jahren vom
@@ -31,7 +31,7 @@ Beispielsweise gibt es verschiedenste Arbeitskreise. Von Politische Bildung,
 Umwelt, Gleichstellung und Familienfreundliche Hochschule zu Ract!, überregionale
 Zusammenarbeit. Jeder Studierende kann sich dort direkt selber einbringen.
 Eine Liste findet ihr auf der Seite des StuRa
-\footnote{\url{https://stura-tuebingen.da/arbeitskreise}}. Schaut da doch mal
+\footnote{\url{https://stura-tuebingen.de/arbeitskreise}}. Schaut da doch mal
 rein. Oder informiert euch auf den Social Media Kanälen 
 \faIcon{instagram}\href{https://www.instagram.com/vs\_tuebingen}{\texttt{vs\_tuebingen}}
 und \faIcon{mastodon}\href{https://toot.kif.rocks/@vs@tuebingen.network}{\texttt{@vs@tuebingen.network}}.
