--- a/shared/vorlesungszeit/fachsprachenzentrum.tex
+++ b/shared/vorlesungszeit/fachsprachenzentrum.tex
@@ -1,4 +1,4 @@
-Am Fachsprachenzentrum\footnote{\url{https://www.uni-tuebingen.de/fsz/}} finden semesterbegleitende Kurse und während der Semesterferien zwei- bis vierwöchige Intensivkurse in verschiedenen Sprachen statt.\\
+Am Fremdsprachenzentrum\footnote{\url{https://www.uni-tuebingen.de/fsz/}} finden semesterbegleitende Kurse und während der Semesterferien zwei- bis vierwöchige Intensivkurse in verschiedenen Sprachen statt.\\
 Neben den Einsteiger- und Anfängerkursen (UNIcert I/II mit je drei Niveaustufen) kann man auch fachspezifische Kurse belegen z. B. Beruf und Studium, Naturwissenschaften, Wirtschaftswissenschaften, etc.  Ob man direkt mit einer höheren Niveaustufe beginnen darf (oder im Grundkurs beginnen muss) entscheidet ein Einstufungstest vor Ort oder online.  Unterrichtet werden die Kurse meist von Muttersprachlern und haben mittleres bis hohes Niveau.
 Die Einschreibung zu den semesterbegleitenden Kursen starten häufig schon vor dem Semester. Die genauen Zeiten werden im Internet (s. o.) bekannt gegeben.  Gerade bei begehrten Kursen (d. h. fast alle Einsteigerkurse wie z. B. Spanisch I oder Italienisch I) sollte man aber bei der  Einschreibung schnell sein. Meist sind alle Plätze schon am ersten Einschreibetag vergeben.\\
 Die Kurse sind für Studenten kostenlos. Wer sich angemeldet hat, muss jedoch auch erscheinen, da Anwesenheitspflicht besteht. Ansonsten droht eine Sperre für weitere Kurse am FSZ für das kommende Semester in der jeweiligen Sprache.
