--- a/info/secondpage.tex
+++ b/info/secondpage.tex
@@ -1,7 +1,7 @@
 \thispagestyle{empty}
 
 \textbf{Fachschaft Informatik:}\\
-Informationen für Studienanfänger\\
+Informationen für Erstsemester\\
 % StudienanfängerInnen
 %\number\auflage. erweiterte und bearbeitete Auf\/lage, Tübingen \number\jahr\\[1cm]
 \number\auflage. komplett überarbeitete Auf\/lage, Tübingen \number\jahr\\[0.2cm]
@@ -12,7 +12,7 @@ Informationen für Studienanfänger\\
 \medskip \\
 
 \begin{tabular}{ll}
-	Redaktion & Hannah, Samuel Füßinger, Anita Leinweber, und alle die vor uns waren \\ %TODO Hier die Leute reinschreiben die rumflamen
+	Redaktion & Charlotte Meiser, Samuel Füßinger, Linus Szillat, und alle die vor uns waren \\ %TODO Hier die Leute reinschreiben die rumflamen
 	Grafik & Tim Beckmann, Florian Heimgärtner \\
 	Satz & \LaTeX
 \end{tabular}\\
