Changed Studienanfänger zu Erstsemester

--- a/kogni/secondpage.tex
+++ b/kogni/secondpage.tex
@@ -1,7 +1,7 @@
 \thispagestyle{empty}
 
 \textbf{Fachschaft Kognitionswissenschaft:}\\
-Informationen für Studienanfänger\\
+Informationen für Erstsemester\\
 % StudienanfängerInnen
 \number\auflage. Auf\/lage, Tübingen \number\jahr\\[0.2cm]
 % Zur besseren Einsicht, welche Version in Druck gegeben wurde und als Hinweis zum Ort des Sourcecodes
