Changed Studienanfänger to Erstsemester

--- a/info/titlepage.tex
+++ b/info/titlepage.tex
@@ -17,7 +17,7 @@
 		\oldbaselineskp=\baselineskip
 		\baselineskip 45pt
 		
-		\Huge Informationen für Studienanfänger\\[2cm]
+		\Huge Informationen für Erstsemester\\[2cm]
 		
 		\ifwintersemester
 		Wintersemester \number\jahr /\number\jahrpluseins
