Changed repetitive text, removed list of other "Fachschaften"

--- a/info/fachschaft.tex
+++ b/info/fachschaft.tex
@@ -7,7 +7,8 @@ engagieren oder engagieren möchten einmal die Woche in der Fachschaftssitzung.
 Hier bereden wir, was die Woche passiert ist und planen die nächsten Wochen. An
 aktiven Fachschaftlern sind wir ungefähr 20 Studierende, die sich regelmäßig
 für die Fachschaft engagieren. Hinzu kommen weitere Fachschaftler, welche
-unregelmäßig bei unseren Aktionen helfen.
+unregelmäßig bei unseren Aktionen helfen. Da das Studienfach Kognitionswissenschaft inhaltlich und organisatiorisch viele
+Überschneidungen mit der Informatik besitzt, arbeiten wir stark mit der Fachschaft Kognitionswissenschaft zusammen.
 
 \subsection{Was macht die Fachschaft?}
 Die Fachschaft übernimmt zahlreiche Aufgaben im Hochschulalltag. Die
@@ -23,9 +24,9 @@ Veranstaltungen, den Brief und dieses Heft einfacher zu machen. Dafür setzen
 sich Semester für Semester wieder einige Fachschaftler zusammen und
 überarbeiten unsere Materialien für euch, planen Veranstaltungen und überlegen,
 was man noch so machen könnte.\\ 
-Falls ihr Lust habt, dafür zu sorgen, dass kommende Erstsemester auch ein
-(hoffentlich) so cooles Programm, oder ein noch besseres bekommen als ihr, dann
-seid ihr hier genau richtig!
+%Falls ihr Lust habt, dafür zu sorgen, dass kommende Erstsemester auch ein
+%(hoffentlich) so cooles Programm, oder ein noch besseres bekommen als ihr, dann
+%seid ihr hier genau richtig!
 
 \textbf{Partys und Feste}
 
@@ -33,8 +34,8 @@ Wir veranstalten pro Semester ein Clubhausfest und jeden Sommer unser
 legendäres Sommerfest auf dem Sand. Hierfür muss alles Mögliche organisiert
 werden: Von der Getränkebestellung über die Gestaltung von Flyern bis zum
 Bandcasting. \\
-Wenn ihr Spaß daran habt, Veranstaltungen zu organisieren, seid ihr hier genau
-richtig!
+%Wenn ihr Spaß daran habt, Veranstaltungen zu organisieren, seid ihr hier genau
+%richtig!
 
 \vfill \pagebreak
 \textbf{Social Events}
@@ -54,8 +55,8 @@ Fachschaft eine ganze Reihe von
 Mailinglisten\footnote{\url{https://www.fsi.uni-tuebingen.de/mailinglisten/}}.
 Wobei Anno Corona ein Discord Server\footnote{\url{https://discord.gg/d4X2WjHWmQ}}
 dazugekommen ist. \\
-Wenn ihr Lust habt, mitzuhelfen, dass eure Kommilitonen weiter kommunizieren
-können, dann seid ihr hier genau richtig!
+%Wenn ihr Lust habt, mitzuhelfen, dass eure Kommilitonen weiter kommunizieren
+%können, dann seid ihr hier genau richtig!
 
 \textbf{Kassensystem}
 
@@ -71,8 +72,8 @@ Universität, der Fakultät und des Fachbereichs. Ein Übersicht über die Gremi
 und unsere derzeitigen Vertreter findet ihr auf unserer
 Website\footnote{\url{https://www.fsi.uni-tuebingen.de/gremien/\#studienkommission}}.
 \\
-Wenn ihr euch für Hochschulpolitik und die Arbeit in Gremien interessierst,
-seid ihr hier genau richtig!
+%Wenn ihr euch für Hochschulpolitik und die Arbeit in Gremien interessierst,
+%seid ihr hier genau richtig!
 
 %\textbf{fsi log}
 %
@@ -98,36 +99,36 @@ Sitzungen sind in der Regel Donnerstags 18:30 Uhr auf dem Sand.
 %ihr Lust habt findet ihr uns zur normalen Zeit (Donnerstags um 18:30) hier:\\
 %\url{https://bbb.fsi.uni-tuebingen.de/b/luk-v3t-dvk}}
 
-\vfill
-\subsection{Andere Fachschaften}
-Hin und wieder kann es sinnvoll und notwendig sein auch eine andere Fachschaft
-zu kontaktieren, wenn es beispielsweise um Veranstaltungen eines anderen
-Fachbereichs geht (Altklausuren!). Diese beantworten eure Fragen ebenfalls
-gerne. Die wichtigsten Kontakte haben wir euch hier aufgelistet:
-
-\textbf{Fachschaft Kognitionswissenschaft}\\
-E-Mail: \email{kogni-fachschaft@fsi.uni-tuebingen.de}\\
-\\
-\textbf{Fachschaft Mathematik}\\
-E-Mail: \email{fachschaft@math.uni-tuebingen.de}\\
-\\
-\textbf{Fachschaft Biologie}\\
-E-Mail: \email{fsbio@uni-tuebingen.de}\\
-\\
-\textbf{Fachschaft Chemie}\\
-E-Mail: \email{fschemie@uni-tuebingen.de}\\
-\\
-\textbf{Fachschaft Physik}\\
-E-Mail: \email{fsphysik@uni-tuebingen.de}\\
-\\
-\textbf{Fachschaft Psychologie}\\
-E-Mail: \email{info@fs-psycho.uni-tuebingen.de}\\
-\\
-\textbf{Fachschaft Medizin}\\
-E-Mail: \email{ info@fachschaftmedizin.de}\\
-\\
-Eine vollständige Liste aller Fachschaften findet ihr auf der Website der
-FSRVV\footnote{\url{https://www.fsrvv.de/gremienarbeit/studentische-gremien/fachschaften/}}.
-%TODO insert \link{}{}?
-
-\vfill
+%\vfill
+%\subsection{Andere Fachschaften}
+%Hin und wieder kann es sinnvoll und notwendig sein auch eine andere Fachschaft
+%zu kontaktieren, wenn es beispielsweise um Veranstaltungen eines anderen
+%Fachbereichs geht (Altklausuren!). Diese beantworten eure Fragen ebenfalls
+%gerne. Die wichtigsten Kontakte haben wir euch hier aufgelistet:
+%
+%\textbf{Fachschaft Kognitionswissenschaft}\\
+%E-Mail: \email{kogni-fachschaft@fsi.uni-tuebingen.de}\\
+%\\
+%\textbf{Fachschaft Mathematik}\\
+%E-Mail: \email{fachschaft@math.uni-tuebingen.de}\\
+%\\
+%\textbf{Fachschaft Biologie}\\
+%E-Mail: \email{fsbio@uni-tuebingen.de}\\
+%\\
+%\textbf{Fachschaft Chemie}\\
+%E-Mail: \email{fschemie@uni-tuebingen.de}\\
+%\\
+%\textbf{Fachschaft Physik}\\
+%E-Mail: \email{fsphysik@uni-tuebingen.de}\\
+%\\
+%\textbf{Fachschaft Psychologie}\\
+%E-Mail: \email{info@fs-psycho.uni-tuebingen.de}\\
+%\\
+%\textbf{Fachschaft Medizin}\\
+%E-Mail: \email{ info@fachschaftmedizin.de}\\
+%\\
+%Eine vollständige Liste aller Fachschaften findet ihr auf der Website der
+%FSRVV\footnote{\url{https://www.fsrvv.de/gremienarbeit/studentische-gremien/fachschaften/}}.
+%%TODO insert \link{}{}?
+%
+%\vfill
