--- a/info/erste_woche/einmaleins.tex
+++ b/info/erste_woche/einmaleins.tex
@@ -8,8 +8,8 @@ Damit ihr nicht ganz verloren im gro\ss en Uni-Wirrwarr umher irrt und
 
 
 %\item [Schwerpunkt-/Nebenfach:] Wenn ihr reine Informatik studiert, steht es
-  euch offen, ob ihr 18 ECTS in ein Schwerpunktfach oder in ÜbK
-  investieren wollt. Letzteres ermöglicht euch eine freiere Wahl an Kursen.
+%  euch offen, ob ihr 18 ECTS in ein Schwerpunktfach oder in ÜbK
+%  investieren wollt. Letzteres ermöglicht euch eine freiere Wahl an Kursen.
   
 \item [übK:] In den meisten Informatik-Studiengängen ist eine bestimmte Anzahl ECTS an Überfachlichen Kompetenzen (übK) vorgesehen. Dabei handelt es sich um (fachfremde-) Wahlveranstaltungen, die einen Einblick in andere Studienrichtungen vermitteln sollten. Am Besten eignen sich hierfür Kurse des \href{TRACS}{https://uni-tuebingen.de/studium/studienangebot/ueberfachliche-kompetenzen/transdisciplinary-course-program/}-Programms der Uni, prinzipiell können aber auch beliebige Veranstaltungen anderer Studiengänge belegt werden, insofern die Anrechnung abgeklärt wurde.
 
