--- a/info/erste_woche/einmaleins.tex
+++ b/info/erste_woche/einmaleins.tex
@@ -11,7 +11,7 @@ Damit ihr nicht ganz verloren im gro\ss en Uni-Wirrwarr umher irrt und
 %  euch offen, ob ihr 18 ECTS in ein Schwerpunktfach oder in ÜbK
 %  investieren wollt. Letzteres ermöglicht euch eine freiere Wahl an Kursen.
   
-\item [übK:] In den meisten Informatik-Studiengängen ist eine bestimmte Anzahl ECTS an Überfachlichen Kompetenzen (übK) vorgesehen. Dabei handelt es sich um (fachfremde-) Wahlveranstaltungen, die einen Einblick in andere Studienrichtungen vermitteln sollten. Am Besten eignen sich hierfür Kurse des \href{TRACS}{https://uni-tuebingen.de/studium/studienangebot/ueberfachliche-kompetenzen/transdisciplinary-course-program/}-Programms der Uni, prinzipiell können aber auch beliebige Veranstaltungen anderer Studiengänge belegt werden, insofern die Anrechnung abgeklärt wurde.
+\item [übK:] In den meisten Informatik-Studiengängen ist eine bestimmte Anzahl ECTS an Überfachlichen Kompetenzen (übK) vorgesehen. Dabei handelt es sich um (fachfremde-) Wahlveranstaltungen, die einen Einblick in andere Studienrichtungen vermitteln sollten. Am Besten eignen sich hierfür Kurse des \href{https://uni-tuebingen.de/studium/studienangebot/ueberfachliche-kompetenzen/transdisciplinary-course-program/}{TRACS}-Programms der Uni, prinzipiell können aber auch beliebige Veranstaltungen anderer Studiengänge belegt werden, insofern die Anrechnung abgeklärt wurde.
 
 \item [Übungen:] Zu den meisten Veranstaltungen des Fachbereichs werden neben den Vorlesungen noch Übungen angeboten, welche euch helfen, den gelernten Stoff zu verinnerlichen. Meist könnt ihr über die Übungsblätter, die ihr wöchentlich oder zweiwöchentlich abgeben könnt, einen Bonus für eure Klausurnote erarbeiten. In machen Vorlesungen kann aber auch eine Mindestpunktzahl in den Übungen Voraussetzung für die Klausur sein.
 
