Removed second cartoon

--- a/info/erste_woche/einmaleins.tex
+++ b/info/erste_woche/einmaleins.tex
@@ -63,9 +63,9 @@ Die Noten der jeweiligen Veranstaltungen werden mit deren ECTS-Punkten gewichtet
 
 \vfill
 
-\begin{center}
-\includegraphics[width=0.35\hsize]{shared/xkcd/lunch.png}
-\end{center}
+%\begin{center}
+%\includegraphics[width=0.35\hsize]{shared/xkcd/lunch.png}
+%\end{center}
 
 \pagebreak
 
