--- a/shared/erste_woche/checkliste.tex
+++ b/shared/erste_woche/checkliste.tex
@@ -14,13 +14,13 @@ In den ersten Wochen an der Uni ist immer viel los: Wir haben euch hier die wich
   		Damit eventuell von der Uni versendete Post auch tatsächlich bei euch ankommt.
   	
   	\item \textbf{WLAN-Zugang mit eduroam einrichten}\\
-  		Mit euren ZDV-Login-Daten (i.d.R. \texttt{zxabc12@uni-tuebingen.de} und dem ZDV-Passwort) könnt ihr uniweit kostenlos per WLAN ins Internet. \textbf{Wichtig:} Bindet ein Zertifikat ein! Eine ausführliche Anleitung hierzu findet ihr im Kapitel Infrastruktur.
+  		Mit euren ZDV-Login-Daten (i.d.R. \texttt{zxabc12@uni-tuebingen.de} und dem ZDV-Passwort) könnt ihr uniweit kostenlos per WLAN ins Internet. \textbf{Wichtig:} Bindet ein Zertifikat ein! Eine ausführliche Anleitung hierzu findet ihr weiter hinten im Heft. 
   	
   	\item \textbf{Mailinglisten anmelden}\\
   	\ifinfo
-  		Um wichtige Informationen zum Studium zu bekommen, solltet ihr euch unbedingt auf der info-studium Mailingliste anmelden (mehr dazu im Abschnitt \textit{Mailinglisten}). Dies ist der offizielle Kanal, den die Profs nutzen, um mit euch in Kontakt zu treten.
+  		Die Fachschaft Informatik pflegt mehrere Mailinglisten. Um wichtige Informationen zum Studium zu bekommen, solltet ihr euch unbedingt auf der info-studium Mailingliste anmelden\footnote{Eine Übersicht und die Anmeldung für die Mailinglisten findet ihr unter \url{https://www.fsi.uni-tuebingen.de/mailinglisten/}}. Dies ist der offizielle Kanal, den die Profs nutzen, um mit euch in Kontakt zu treten.
   	\else
-  		Als Kognis solltet ihr euch unbedingt auf den folgenden drei Mailinglisten anmelden; info-studium (offizieller Kommunikationskanal der Info-Profs), kogwis (offizieller Kommunikationskanal der Kogni-Profs und Studienberatung), und versuche (mehr dazu im Abschnitt \textit{Versuchspersonenstunden}, es gibt außerdem die Facebook-Gruppe \textit{Versuchspersonenbörse Tübingen}). Wie ihr euch auf die Listen anmelden könnt, und weitere Mailinglisten findet ihr im Abschnitt \textit{Mailinglisten}.
+  		Die Fachschaften Informatik und Kognitionswissenschaften pflegen mehrere Mailinglisten. Als Kognis solltet ihr euch unbedingt auf den folgenden drei Mailinglisten anmelden; info-studium (offizieller Kommunikationskanal der Info-Profs), kogwis (offizieller Kommunikationskanal der Kogni-Profs und Studienberatung), und versuche (mehr dazu im Abschnitt \textit{Versuchspersonenstunden}, es gibt außerdem die Facebook-Gruppe \textit{Versuchspersonenbörse Tübingen}).\footnote{Eine Übersicht und die Anmeldung für die Mailinglisten findet ihr unter \url{https://www.fsi.uni-tuebingen.de/mailinglisten/}}
   	\fi
   	
 	\item \textbf{Zum Übungsbetrieb anmelden} \\
@@ -29,8 +29,8 @@ In den ersten Wochen an der Uni ist immer viel los: Wir haben euch hier die wich
   	\item \textbf{Übungspartner suchen} \\
 	  	Übungsblätter im Alleingang zu machen ist zwar möglich, aber schwierig. Sucht euch daher am besten gleich am Anfang pro Veranstaltung mit Übungsbetrieb einen Übungspartner, mit dem ihr die Blätter abgeben könnt.
 	  	
-	\item \textbf{Bescheinigung für Semesterticket} \\	
-		Falls ihr ein Semesterticket erwerben wollt, benötigt ihr dafür eine entsprechende Bescheinigung, die ihr in ALMA unter Studienservice findet. Wo ihr das Semesterticket (auch online) kaufen könnt und weitere Infos sind auf der Webseite der Uni zusammengefasst \url{https://uni-tuebingen.de/de/958}.
+	\item \textbf{Fahrkarte besorgen} \\	
+		Falls ihr ein Semesterticket (gültig im naldo-Gebiet) oder ein D-Ticket JugendBW (gültig in Deutschland) erwerben wollt, benötigt ihr dafür eine entsprechende Bescheinigung, die ihr in ALMA unter Studienservice findet. Wo ihr das Semesterticket (auch online) kaufen könnt und weitere Infos sind auf der Webseite der Uni zusammengefasst \url{https://uni-tuebingen.de/de/958}.
 	
 	\item \textbf{FAQ} \\
 	\ifinfo
