Removed mention of time table

--- a/info/vorlesungszeit/stundenplan.tex
+++ b/info/vorlesungszeit/stundenplan.tex
@@ -3,6 +3,4 @@ Anfibrief erhalten. Solltet ihr den Brief nicht mehr haben oder ihn nicht
 bekommen haben, könnt ihr ihn euch auf unserer
 Website\footnote{\link{https://teri.fsi.uni-tuebingen.de/anfibrief/}{Anfibrief
 der FSI}} nochmal runterladen.\\ 
-Im hinteren Teil des Hefts findet ihr einen Plan zum selbst ausfüllen, in dem
-ihr euren finalen Stundenplan inklusive
-Tutorien, Treffen mit Übungspartnern etc. eintragen könnt.
+Im finalen Zustand sollten natürlich noch Tutorien, Treffen mit Übungspartnern etc. eingetragen worden sein. 
