Changed spacing of bullet points

--- a/shared/vorlesungszeit/mensen.tex
+++ b/shared/vorlesungszeit/mensen.tex
@@ -38,10 +38,11 @@ WLAN.\\
 %\vfill \pagebreak
 In Tübingen gibt es folgende Cafeterien:
 \begin{itemize}
+	\setlength\itemsep{0.3em}
 	\item Cafeteria Unibibliothek
 %	\item Cafeteria Wilhelmstraße
 	\item Cafeteria Morgenstelle (im Mensagebäude)
-	\item \textcolor{gray}{Cafeteria Hörsaalzentrum} (Die Flachpfeifen haben die einfach geschlossen!)
+%	\item \textcolor{gray}{Cafeteria Hörsaalzentrum} (Die Flachpfeifen haben die einfach geschlossen!)
 	\item Cafeteria Prinz Karl
 	\item Cafeteria Clubhaus
 	\item Cafeteria Theologicum
