--- a/shared/vorlesungszeit/hopo.tex
+++ b/shared/vorlesungszeit/hopo.tex
@@ -1,61 +1,74 @@
 An der Uni mag es zwar manchmal so wirken, dass die Studierenden der unwichstigste
 Teil des Apparates sind.
 Aber für uns Studierennde ist das eben nicht der Fall.
-Damit das auch die anderen Instanzen und Interessensgruppen verstehen, gibt es
-etwas das nennt sich Hochschulpolitik und \textit{Verfasste
+Damit das auch die anderen Instanzen und Interessensgruppen verstehen, gibt es die Hochschulpolitik und \textit{Verfasste
 Studierendenschaft}. Dort kann jeder Studierende sich engagieren oder seine/ihre
 Anliegen hintragen.
 
-Was ist denn die Verfasste Studierendenschaft? Du und alle anderen Studierenden
-Tübingens. So einfach die kurze Antwort. Die Lange bezieht sich auf einen
-Ausschnitt des \textit{Landeshochschulgesetzes}.  Zusammengefasst steht da
-sowas wie ,,Studierende an einem Hochschulstandort haben das Recht, sich zusammen
-zu schließen und als Interessensvertretung in der Hochschule Gehör zu finden''.
-Das Interessante ist, dass die Verfasste Studierendenschaft auch Gelder bekommt,
-beispielsweise aus dem Semesterbeitrag.
+%Was ist denn die Verfasste Studierendenschaft? Du und alle anderen Studierenden
+%Tübingens. So einfach die kurze Antwort. Die Lange bezieht sich auf einen
+%Ausschnitt des \textit{Landeshochschulgesetzes}.  Zusammengefasst steht da
+%sowas wie ,,Studierende an einem Hochschulstandort haben das Recht, sich zusammen
+%zu schließen und als Interessensvertretung in der Hochschule Gehör zu finden''.
+%Das Interessante ist, dass die Verfasste Studierendenschaft auch Gelder bekommt,
+%beispielsweise aus dem Semesterbeitrag.
 
-In Tübingen kann man mehr als 200 Dinge studieren und etwa ein Drittel der
-Einwohner sind Studierende. Es wundert also nicht, dass es hier eine
-gut aufgestellte Studierendenvertretung gibt.
+Vereinfacht ausgedrückt bilden Du und alle anderen Studierenden die Verfasste Studierendenschaft. 
+Dieser stehen Gelder, unter anderem aus dem Semesterbeitrag, zur Verfügung. 
+Vertreten werden die Interessen der Verfassten Studierendenschaft beispielsweise durch den Studierendenrat (StuRa).
 
+%In Tübingen kann man mehr als 200 Dinge studieren und etwa ein Drittel der
+%Einwohner sind Studierende. Es wundert also nicht, dass es hier eine
+%gut aufgestellte Studierendenvertretung gibt.
 
-\subsection{StuRa, AStA, was ist das?}
+%\subsection{StuRa, AStA, was ist das?}
 
-Vielleicht sagt euch der Begriff AStA -- also Allgememeiner
-Studierendenausschuss -- etwas. In Tübingen wurde der vor vielen Jahren vom
-StuRa -- Kurzform von Studierenden Rat -- entmachtet und seitdem erfüllt dieser
-die Rolle der allgemeinen Studierendenvertretung. Während wir als Fachschaft
-eine studentische Vertretung im Fach sind, ist der StuRa allgemeingültiger.
+%Vielleicht sagt euch der Begriff AStA -- also Allgememeiner
+%Studierendenausschuss -- etwas. In Tübingen wurde der vor vielen Jahren vom
+%StuRa -- Kurzform von Studierenden Rat -- entmachtet und seitdem erfüllt dieser
+%die Rolle der allgemeinen Studierendenvertretung. Während wir als Fachschaft
+%eine studentische Vertretung im Fach sind, ist der StuRa allgemeingültiger.
 
-Beispielsweise gibt es verschiedenste Arbeitskreise. Von Politische Bildung,
-Umwelt, Gleichstellung und Familienfreundliche Hochschule zu Ract!, überregionale
-Zusammenarbeit. Jeder Studierende kann sich dort direkt selber einbringen.
-Eine Liste findet ihr auf der Seite des StuRa
-\footnote{\url{https://stura-tuebingen.de/arbeitskreise}}. Schaut da doch mal
-rein. Oder informiert euch auf den Social Media Kanälen 
+\subsubsection{StuRa}
+
+Der Studierenden Rat (StuRa) erfüllt die Rolle der allgemeinen Studierendenvertretung. 
+Im Vergleich zur Fachschaft ist der StuRa dabei allgemeingültiger und repräsentiert alle Studierenden. 
+
+Der StuRa setzt sich aus 20 Studierenden zusammen, die Mitglied verschiedener Hochschulgruppen wie der Grünen Hochschulgruppe (GHG), der Juso Hochschulgruppe
+oder der FSVV sind. Gewählt werden diese im Sommersemester per Listenwahl. Wählen und sich aufstellen dürfen alle immatrikulierten Studierenden der Uni Tübingen.
+
+Es gibt verschiedenste Arbeitsgruppen in denen sich Studierende direkt in den StuRa einbringen können. 
+Eine Liste findet ihr auf der Seite des StuRa\footnote{\url{https://stura-tuebingen.de/arbeitskreise}}. 
+Schaut da doch mal rein. Oder informiert euch auf den Social Media Kanälen 
 \faIcon{instagram}\href{https://www.instagram.com/vs\_tuebingen}{\texttt{vs\_tuebingen}}
 und \faIcon{mastodon}\href{https://toot.kif.rocks/@vs@tuebingen.network}{\texttt{@vs@tuebingen.network}}.
 
+%Beispielsweise gibt es verschiedenste Arbeitskreise wie Politische Bildung,
+%Umwelt, Gleichstellung und Familienfreundliche Hochschule zu Ract!, überregionale
+%Zusammenarbeit. Jeder Studierende kann sich dort direkt selber einbringen.
+%Eine Liste findet ihr auf der Seite des StuRa
+%\footnote{\url{https://stura-tuebingen.de/arbeitskreise}}. Schaut da doch mal
+%rein. Oder informiert euch auf den Social Media Kanälen 
+%\faIcon{instagram}\href{https://www.instagram.com/vs\_tuebingen}{\texttt{vs\_tuebingen}}
+%und \faIcon{mastodon}\href{https://toot.kif.rocks/@vs@tuebingen.network}{\texttt{@vs@tuebingen.network}}.
 
 Außerdem vergibt der StuRa ein Notlagenstipendium an Studierende in Not, fördert
 Veranstaltungen für Studierende und hält jährlich eine studentische Vollversammlung
 ab, in der alle Studierende das Recht haben Anträge zu stellen und über diese abzustimmen.
 
-Jedes Sommersemester werden die ca. 20 Vertreter für das nächste Jahr gewählt.
-Wählen und sich aufstellen dürfen alle immatrikulierten Studierende Tübingens,
-wobei es eine Listenwahl ist, das heißt verschiedene
-Hochschulgruppen melden eine Liste zur Wahl an. Solche Hochschulgruppen
-sind beispielsweise die Grüne Hochschulgruppe (GHG), die Juso Hochschulgruppe
-oder die FSVV. An den Namen sieht man bereits, dass das mehr als nur eine
-SMV\footnote{Schüler Mit Verantwortung} an der Uni ist und es doch schon
-allgemeinpolitischer ist.
+%Jedes Sommersemester werden die ca. 20 Vertreter für das nächste Jahr gewählt.
+%Wählen und sich aufstellen dürfen alle immatrikulierten Studierende Tübingens,
+%wobei es eine Listenwahl ist, das heißt verschiedene
+%Hochschulgruppen melden eine Liste zur Wahl an. Solche Hochschulgruppen
+%sind beispielsweise die Grüne Hochschulgruppe (GHG), die Juso Hochschulgruppe
+%oder die FSVV. 
+%An den Namen sieht man bereits, dass das mehr als nur eine
+%SMV\footnote{Schüler Mit Verantwortung} an der Uni ist und es doch schon
+%allgemeinpolitischer ist.
 
 \link{https://stura-tuebingen.de/}{Studierendenrat Tübingen}
 
-
-\subsection{FSVV}
-Was ist denn das jetzt wieder für eine Abkürzung? FSVV steht
-für \textbf{F}ach\textbf{S}chaften\textbf{V}oll\textbf{V}ersammlung und ist
-quasi die Partei aller Fachschaften. Was heißt, dass wir als Fachschaft in den
-wöchentlichen Versammlungen dieses Bündnisses Stimmrecht besitzen.
+\subsubsection{FSVV}
+FSVV steht für \textbf{F}ach\textbf{S}chaften\textbf{V}oll\textbf{V}ersammlung und ist
+quasi die Partei aller Fachschaften. Wir als Fachschaft sind in den wöchentlichen Versammlungen dieses Bündnisses stimmberechtigt.
 
