Changed image sizing to fit one page

--- a/info/anhang/lageplaene.tex
+++ b/info/anhang/lageplaene.tex
@@ -1,14 +1,14 @@
 Tübingen hat keine Universität, Tübingen \textbf{ist} eine Universität, daher existiert auch kein Uni-Campus im herkömmlichen Sinne. Alles spielt sich irgendwo in der Stadt ab, für euch im ersten Semester vor allem auf der Morgenstelle, später auch auf dem Sand. Damit ihr euch dort zurechtfindet, haben wir hier ein paar Lagepläne zusammengefasst. Diese sind keinesfalls allumfassend, sie sollen euch lediglich eine grobe Orientierung durch den Dschungel der Uni-Gebäude bieten.
-\subsection*{Morgenstelle}
+\subsubsection*{Morgenstelle}
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=0.4\textwidth]{shared/anhang/lageplaene/uebersicht_morgenstelle.pdf}
 \end{figure}
 %\newpage
-\subsection*{Sand}
+\subsubsection*{Sand}
 \begin{figure}[ht!]
 	\centering
-	\includegraphics[width=0.65\textwidth]{shared/anhang/lageplaene/uebersicht_sand.pdf}
+	\includegraphics[width=0.5\textwidth]{shared/anhang/lageplaene/uebersicht_sand.pdf}
 \end{figure}
 %\subsubsection*{Sand, Erdgeschoss}~
 %\begin{figure}[ht!]
