Removed spacing at end of text

--- a/shared/vorlesungszeit/fachsprachenzentrum.tex
+++ b/shared/vorlesungszeit/fachsprachenzentrum.tex
@@ -9,4 +9,4 @@ Eine Alternative zum FSZ der Uni ist natürlich die klassische Volkshochschule. 
 %Dort finden sich Kurse vieler Sprachen, von Englisch bis Hindi oder Suaheli in jeweils mehreren Niveaustufen und mit vielen Spezialkursen, z.B. Konversationskurse, Grammatikkurse, Reisekurse, Kinderkurse. 
 Die Kurse kosten zwischen 90 und 150 EUR (je nach Sprache, Kursart, Dauer, ...). Das Niveau dieser Kurse ist im Allgemeinen relativ niedrig, allerdings kann man das auch vorher telefonisch bei der vhs erfragen und sich dort beraten lassen.
 
-\vfill
+%\vfill
