--- a/shared/vorlesungszeit/unikino.tex
+++ b/shared/vorlesungszeit/unikino.tex
@@ -42,4 +42,4 @@ Instagram oder Facebook, über den folgenden QR-Code:
 \textbf{Ort}: Hörsaal 24 im Kupferbau\\
 Alle Filme in Originalsprache mit Untertiteln.
 
-
+\normalsize
