--- a/info/erste_woche/die_ersten_wochen.tex
+++ b/info/erste_woche/die_ersten_wochen.tex
@@ -1,16 +1,18 @@
 
 % uncomment in non-corona semester
-Hier haben wir euch die wichtigsten Termine der ersten Wochen
+Hier haben wir euch die wichtigsten Termine der ersten Woche
 zusammengefasst. Eine Einladung mit ausführlichen Beschreibungen der
 Erstsemesterveranstaltungen solltet ihr schon mit eurem
 Erstibrief\footnote{\url{https://teri.fsi.uni-tuebingen.de/anfibrief/}}
 bekommen haben.\\
-Die Anmeldung und mehr Informationen zu den Veranstaltungen findet man hier:\\
+Die Anmeldung und mehr Informationen zu den Veranstaltungen findet man hier:
+
 \link{https://eei.fsi.uni-tuebingen.de}{Anmeldeplattform für Fachschaftsveranstaltungen}
 
 \definecolor{lightlightgray}{RGB}{235,235,235}
 \newcommand{\event}{\cellcolor{lightlightgray}}
 
+Der folgende Stundenplan gilt für den B. Sc. in Informatik. Euer eigener Stundenplan kann also von dem hier Gezeigten abweichen. Achtet also auf den Stundenplan in eurem Ersti-Brief. Die Ersti-Veranstaltungen sowie die Mathe und Informatik-Vorlesungen sollten aber alle betreffen. 
 
 %\textbf{Woche 1 - (08. - 14. April)}\\
 %\\
