Shortened to fit one page

--- a/info/vorlesungszeit/verlaufsplaene.tex
+++ b/info/vorlesungszeit/verlaufsplaene.tex
@@ -1,7 +1,7 @@
 In höheren Semestern wird von euch erwartet werden, euren Stundenplan
 entsprechend eurer Prüfungsordnung und eures Modulhandbuches selbst
-zusammenzusuchen. Dies bedeutet oft mehrere Stunden mit geöffnetem ALMA,
-PDF-Dateien sowie Stift und Zettel. 
+zusammenzusuchen. %Dies bedeutet oft mehrere Stunden mit geöffnetem ALMA,
+%PDF-Dateien sowie Stift und Zettel. 
 %Um euch bereits jetzt einen Überblick zu
 %bieten, was euch nach dem ersten Semester erwartet, haben wir für euch hier die
 %so genannten Studienverlaufspläne zusammengefasst. Diese Pläne sind eine
@@ -15,13 +15,13 @@ Modulhandbüchern auch von \emph{Studium Professionale},
 \emph{Schlüsselqualifikationen} oder \emph{TCP} die Rede. Offiziell geht es
 hier um das Programm der Uni, in der Praxis kann jedoch alles gewählt werden,
 das eine Prüfungleistung beinhaltet, für die man einen benoteten Schein
-bekommt\footnote{abgesehen von Sportkursen}. \\
+bekommt\footnote{abgesehen von Sportkursen}.
 %Oft lohnt es sich auch, sich aus
 %der eigenen comfort zone herauszubewegen und z.B. ein Seminar in den
 %Geisteswissenschaften zu besuchen.\\
-Außerdem beinhalten alle Studiengänge das \textbf{Teamprojekt}, dies ist ein
-von einem Lehrstuhl angebotenes Programmier- bzw. Forschungsprojekt, welches
-ihr in kleineren Gruppen absolvieren müsst. 
+%Außerdem beinhalten alle Studiengänge das \textbf{Teamprojekt}, dies ist ein
+%von einem Lehrstuhl angebotenes Programmier- bzw. Forschungsprojekt, welches
+%ihr in kleineren Gruppen absolvieren müsst. 
 %Hier sammelt ihr erste Erfahrungen
 %im teambasierten Arbeiten, setzt euch mit Versionierungssystemen etc.
 %auseinander und erhaltet einen Einblick in die agile Softwareentwicklung.
