--- a/shared/vorlesungszeit/mensen.tex
+++ b/shared/vorlesungszeit/mensen.tex
@@ -12,15 +12,15 @@ Mo - Fr~11$^{\underline{30}}$~--~14$^{\underline{00}}$
 
 \bigskip
 
-Mensa Shedhalle:\\
-Mo - Do~11$^{\underline{15}}$~--~14$^{\underline{00}}$
+Mensa Wilhelmstraße:\\
+Wiedereröffnung zum WS 24/25 %Mo - Do~11$^{\underline{15}}$~--~14$^{\underline{00}}$
 
 \bigskip
 
 \nopagebreak
 Prinz Karl:\\
-Mo - Fr~11$^{\underline{00}}$~--~15$^{\underline{00}}$\\
-Essensausgabe: ~11$^{\underline{15}}$~--~15$^{\underline{00}}$
+Mo - Fr~11$^{\underline{00}}$~--~14$^{\underline{00}}$\\
+Essensausgabe: ~11$^{\underline{15}}$~--~14$^{\underline{00}}$
 
 \end{center}
 
