--- a/shared/vorlesungszeit/hochschulsport.tex
+++ b/shared/vorlesungszeit/hochschulsport.tex
@@ -25,5 +25,7 @@ Internetanbindung an die Uni-Server ;)
 %\vfill
 
 \begin{center}
-\includegraphics[width=0.6\hsize]{shared/xkcd/sports_champions.png}
+\includegraphics[width=0.8\hsize]{shared/xkcd/sports_champions.png}
 \end{center}
+
+\pagebreak
