--- a/info/hilfe/studierendensekretariat.tex
+++ b/info/hilfe/studierendensekretariat.tex
@@ -1,1 +1,1 @@
-Das Studierendensekretariat\footnote{\url{https://uni-tuebingen.de/de/596}} befindet sich in der Wilhelmstraße 11 direkt neben der ehemaligen Mensa Wilhelmstraße. Das Studierendensekretariat ist zuständig für eure Immatrikulation und Exmatrikulation, amtliche Bescheinigungen sowie alles, was mit dem Studierendenausweis zu tun hat. Im Eingangsbereich befindet sich zudem ein Automat, um den Semesteraufdruck auf eurem Ausweis zu erneuern.	%TODO insert \link{}{}?
+Das Studierendensekretariat\footnote{\url{https://uni-tuebingen.de/de/596}} befindet sich in der Wilhelmstraße 11 direkt neben der Mensa Wilhelmstraße. Das Studierendensekretariat ist zuständig für eure Immatrikulation und Exmatrikulation, amtliche Bescheinigungen sowie alles, was mit dem Studierendenausweis zu tun hat. Im Eingangsbereich befindet sich zudem ein Automat, um den Semesteraufdruck auf eurem Ausweis zu erneuern.	%TODO insert \link{}{}?
