--- a/info/hilfe/pruefungsskretariate.tex
+++ b/info/hilfe/pruefungsskretariate.tex
@@ -42,9 +42,8 @@ Telefon 07071 - 29 - 75991\\
 E-Mail: \email{pruefungsamt.bioinformatik@uni-tuebingen.de}/ \email{pruefungsamt.medizininformatik@uni-tuebingen.de}/ \email{pruefungsamt.medieninformatik@uni-tuebingen.de} \\
 Tel. Sprechzeiten: Mo: 11:00-12:00 Uhr \& Mi: 13:00-14:00 Uhr\\
 
-
 \textbf{Informatik-Lehramt}\\
-Tanja Mader, Raum 3A22 (E-Bau, Morgenstelle)\\
+Tanja Mader, Wilhelmstraße 19\\
 Telefon 07071 - 29 - 76167\\
 E-Mail: \email{pruefungsamt.lehramt@mnf.uni-tuebingen.de}\\
 Di: 9:00-11:00 Uhr (mit Terminvereinbarung)\\
