--- a/makeconfig.default.tex
+++ b/makeconfig.default.tex
@@ -1,4 +1,4 @@
-% Use this file when you can't use make, change to your needs and copy the content to makeconfig.tex
+% Use this file when you can't use make, change to your needs and rename file to makeconfig.tex
 % pdflatex anfiheft.tex
 
 \wintersemestertrue
