Correction first sentence

--- a/kogni/erste_woche/die_ersten_wochen.tex
+++ b/kogni/erste_woche/die_ersten_wochen.tex
@@ -1,4 +1,6 @@
-Auf den folgenden vier Seiten haben wir euch die wichtigsten Termine der kommenden vier Wochen nochmal zusammengefasst. Eine Einladung mit ausführlichen Beschreibungen der Erstsemesterveranstaltungen solltet ihr schon mit eurem Erstibrief\footnote{\url{https://www.fsi.uni-tuebingen.de/du-bist-ersti/}} bekommen haben.
+%Auf den folgenden vier Seiten haben wir euch die wichtigsten Termine der kommenden vier Wochen nochmal zusammengefasst. Eine Einladung mit ausführlichen Beschreibungen der Erstsemesterveranstaltungen solltet ihr schon mit eurem Erstibrief\footnote{\url{https://www.fsi.uni-tuebingen.de/du-bist-ersti/}} bekommen haben.
+Auf dieser Seite haben wir euch die wichtigsten Termine der ersten Woche nochmal zusammengefasst. Eine Einladung mit ausführlichen Beschreibungen der Erstsemesterveranstaltungen solltet ihr schon mit eurem Erstibrief\footnote{\url{https://www.fsi.uni-tuebingen.de/du-bist-ersti/}} bekommen haben.
+
 
 \definecolor{lightlightgray}{RGB}{235,235,235}
 
