Removed Sehenswürdigkeiten from kogni-version

--- a/anfiheft.tex
+++ b/anfiheft.tex
@@ -257,11 +257,11 @@
 %\subsection{Verkehr}
 %\input{shared/tuebingen/verkehr.tex}
 
-
+\ifinfo
 \newpage
 \subsection{Sehenswürdigkeiten}
 \input{shared/tuebingen/sehenswuerdigkeiten.tex}
-
+\fi
 
 \newpage
 \section{Hilfe und Beratung}
