use en dashes for ranges, correct typesetting for time of day https://de.wikipedia.org/wiki/Halbgeviertstrich#Bis-Strich

--- a/shared/life/wohnen.tex
+++ b/shared/life/wohnen.tex
@@ -18,11 +18,10 @@ Die Wohnheimplätze sind im Vergleich zu vielen privaten
 
 Bei der Suche nach einem Zimmer oder einer Wohnung bei privaten
   Vermietern kann die Zimmervermittlung des Studierendenwerks helfen.
-  Sprechstunden sind Mo - Fr~10$^{\underline{00}}$~--~16$^{\underline{30}}$
-  in der Mensa Wilhelmstraße.  Die Vermittlung der Zimmer ist kostenlos;
-  allerdings müsst ihr persönlich vorbeikommen.
+  Sprechstunden sind Mo.--Fr.,~10:00--16:30~Uhr in der Mensa Wilhelmstraße.
+  Die Vermittlung der Zimmer ist kostenlos; allerdings müsst ihr persönlich vorbeikommen.
   Die Neuzugänge  eines Vor- bzw. Nachmittags werden gesammelt, und jeweils um
-  11$^{\underline{00}}$ bzw. 14$^{\underline{00}}$ werden dann die
+  11:30 bzw. 14:00~Uhr werden dann die
   Adressen gegen ein Pfand von 10,00 EUR an die Zimmersuchenden
   ausgehändigt.
   
