--- a/info/vorlesungszeit/verlaufsplaene.tex
+++ b/info/vorlesungszeit/verlaufsplaene.tex
@@ -36,11 +36,11 @@ ihrem alten Namen zu bezeichnen. Hier findet ihr eine kurze Übersicht, die bei 
 
 \begin{tabular}{ll}
 \emph{Alte Bezeichnung}						& \emph{Neue Bezeichnung} \\[.4em]
-Mathematik 1 - 3, Stochastik/Numerik	& Mathematik für Informatik 1-4 \\[.4em]
-Informatik 1 - 2, Software Engineering + Teamprojekt & Praktische Informatik 1-4\\[.4em]
-Einführung Technische Informatik, Informatik der Systeme & Technische Informatik 1-3\\
+Mathematik 1--3, Stochastik/Numerik	& Mathematik für Informatik 1--4 \\[.4em]
+Informatik 1--2, Software Engineering, Teamprojekt & Praktische Informatik 1--4\\[.4em]
+Einführung Technische Informatik, Informatik der Systeme & Technische Informatik 1--3\\
 Basispraktikum & \\[.4em]
-Algorithmen, Theoretische Informatik	& Theoretische Informatik 1-2 \\[.4em]
+Algorithmen, Theoretische Informatik	& Theoretische Informatik 1--2 \\[.4em]
 \end{tabular}
 
 %\pagebreak
