--- a/shared/vorlesungszeit/mensen.tex
+++ b/shared/vorlesungszeit/mensen.tex
@@ -8,19 +8,19 @@ eurem Studierendenausweis.\\ Die Öffnungszeiten der Mensen sind:
 \begin{center}
 
 Mensa Morgenstelle:\\
-Mo - Fr~11$^{\underline{30}}$~--~14$^{\underline{00}}$
+Mo.--Fr.,~11:30--14:00~Uhr
 
 \bigskip
 
 Mensa Wilhelmstraße:\\
-Wiedereröffnung zum WS 24/25 %Mo - Do~11$^{\underline{15}}$~--~14$^{\underline{00}}$
+Wiedereröffnung zum WS 24/25 %Mo.--Do.,~11:15--14:00~Uhr
 
 \bigskip
 
 \nopagebreak
 Prinz Karl:\\
-Mo - Fr~11$^{\underline{00}}$~--~14$^{\underline{00}}$\\
-Essensausgabe: ~11$^{\underline{15}}$~--~14$^{\underline{00}}$
+Mo.--Fr.,~11:00--14:00~Uhr\\
+Essensausgabe: 11:15--14:00~Uhr
 
 \end{center}
 
